fix map on mobile

--- a/VollyV2/wwwroot/css/site.css
+++ b/VollyV2/wwwroot/css/site.css
@@ -317,8 +317,6 @@ nav img.img-brand {
     }
 
     #searchNearMe {
-        position: absolute;
-        left: 0;
         display: none;
     }
 
